# lerobot_mujoco

./: README.md  pyproject.toml
src/lerobot_mujoco/: __init__.py  path_utils.py
src/lerobot_mujoco.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/lerobot_mujoco/assets/low_cost_robot_6dof/: follower.xml  lift_cube.xml  push_cube.xml
src/lerobot_mujoco/envs/: lift_cube_env.py  pick_place_cube_env.py  push_cube_env.py  push_cube_loop_env.py  reach_cube_env.py  stack_two_cubes_env.py
src/lerobot_mujoco/examples/: keyboard_teleop.py
