[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot_mujoco"
version = "0.1.0"
description = "LeRobot arms integrated with mujoco"
readme = "README.md"
authors = [
  { name="Eric Rosen", email="eric.andrew.rosen@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
]

[project.urls]
Homepage = "https://github.com/your/repo"
