[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot_mujoco"
version = "0.1.0"
description = "LeRobot arms integrated with mujoco"
readme = "README.md"
license = "Apache-2.0"
authors = [
  { name="Eric Rosen", email="eric.andrew.rosen@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
  "gymnasium>=1.2.0",
  "mujoco>=3.0"
]

[project.optional-dependencies]
keyboard = [
    "pygame>=2.6.1"
]

[project.urls]
Homepage = "https://github.com/your/repo"
